wow what a commit totes didnt keep up on these and final

--- a/server/public/views/index.html
+++ b/server/public/views/index.html
@@ -11,9 +11,21 @@
     <h1> CALCULATOR </h1>
       <div class="enterValues">
         <h2> TL-17 </h2>
-        <input type="text" placeholder="valueOne" id="valueOne" />
-        <input type="text" placeholder="valueTwo" id="valueTwo" />
-        <button type="button" id="calculate">Calculate!</button>
+        <input type="text" placeholder="x" id="valueX" />
+        <br>
+        <input type="text" placeholder="y" id="valueY" />
+      </div>
+      <br>
+      <div class="operators">
+        <button type="button" id= 'add' > + </button>
+        <button type="button" id= 'subtract' > - </button>
+        <button type="button" id= 'multiply' > x </button>
+        <button type="button" id= 'divide' > / </button>
+      </div>
+      <br>
+      <div class="calcClear">
+        <button type="button" id="calculate"> Calculate! </button>
+        <button type="button" id="clear"> Clear Screen </button>
       </div>
       <div class="answers">
 
